logs/invoicer.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PIL'...
Listing './lib/python3.5/site-packages/PIL/.libs'...
Listing './lib/python3.5/site-packages/Pillow-5.0.0.dist-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/invoicer'...
Compiling './lib/python3.5/site-packages/invoicer/main.py'...
***   File "./lib/python3.5/site-packages/invoicer/main.py", line 14
    print "Document %s PDF created" % document.number
                                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/invoicer/res'...
Listing './lib/python3.5/site-packages/invoicer/res/fonts'...
Listing './lib/python3.5/site-packages/invoicer/res/imgs'...
Listing './lib/python3.5/site-packages/invoicer/res/values'...
Listing './lib/python3.5/site-packages/invoicer-0.1.0b21.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/reportlab'...
Listing './lib/python3.5/site-packages/reportlab/.libs'...
Listing './lib/python3.5/site-packages/reportlab/fonts'...
Listing './lib/python3.5/site-packages/reportlab/graphics'...
Listing './lib/python3.5/site-packages/reportlab/graphics/barcode'...
Listing './lib/python3.5/site-packages/reportlab/graphics/charts'...
Listing './lib/python3.5/site-packages/reportlab/graphics/samples'...
Listing './lib/python3.5/site-packages/reportlab/graphics/widgets'...
Listing './lib/python3.5/site-packages/reportlab/lib'...
Listing './lib/python3.5/site-packages/reportlab/pdfbase'...
Listing './lib/python3.5/site-packages/reportlab/pdfgen'...
Listing './lib/python3.5/site-packages/reportlab/platypus'...
Listing './lib/python3.5/site-packages/reportlab-3.4.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
